# AdminVU

./: .gitignore  CMakeLists.txt  ORCA_API_NOTES.md  QUICK_START.md  README.md  check_orca.sh  test_orca_api.c
asm/: CMakeLists.txt  fast_hash.asm
docs/: API_EXAMPLES.md  DATABASE_API.md  ORCA_API_NOTES.md  PROPAGATION_API.md  QUICK_START.md
src/: CMakeLists.txt  api.c  api.h  database.c  database.h  database_propagation.c  database_propagation.h  env_parser.c  env_parser.h  http_server.c  http_server.h  main.c
src/modules/: chess.c  chess.h  components_v2.c  components_v2.h  factcheck.c  factcheck.h  fun.c  fun.h  messaging.c  messaging.h  moderation.c  moderation.h  personaplex_bridge.c  personaplex_bridge.h  ping.c  ping.h  propagation.c  propagation.h  ticket.c  ticket.h
src/modules/chess/src/: chess.c  chess.h  chess_engine.c  chess_engine.h  move_lawyer.c  move_lawyer.h  nnue.c  nnue.h  search.c  search.h
src/modules/fatnum/: doc.html
src/web/: dashboard.html  index.html  messaging.html  moderation.html  propagation.html  script.js  style.css  tickets.html
web/: index.html  moderation.html  propagation.html  script.js  style.css  tickets.html
